--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -27,14 +27,6 @@
 			}
 			
 		</style>
-		<script type="text/javascript" src="https://getfirebug.com/firebug-lite.js">
-		{
-			overrideConsole: false,
-			startOpened: true,
-			enableTrace: true
-		}
-
-		</script>
 		<script type="text/javascript" src="lib/jquery/jquery-1.4.2.js"></script>
 		<script type="text/javascript" src="lib/jquery/jquery-ui-1.8.2.custom.min.js"></script>
 		<script type="text/javascript" src="jquery-dynamic-form.js"></script>
@@ -116,36 +108,7 @@
 	</head>
 	<body>
 		<h1>jQuery Dynamic Form</h1>
-		<pre>
-<?php
-if(!empty($_POST)){
-	var_dump($_POST);
-}
-
-function formatForm($form, $level){
-	foreach ($form as $key => $value) {
-		if($level == -1){
-			echo "\nForm $key\n";
-		}
-		if(is_array($value)){
-			if($level > -1){
-				echo str_repeat("\t", $level);
-				echo "$key\n";
-			}
-			formatForm($value, $level+1);
-		}else{
-			if($level > -1){
-				echo str_repeat("\t", $level);
-			}
-			echo "$key : $value\n";
-		}
-	}
-}
-formatForm($_POST, -1);
-
-?>
-		</pre>
-		<form method="post" action="#" value="Post">
+		<form method="post" action="result.php" value="Post">
 			<fieldset>
 				<legend> Nested fields duplication</legend>
 				<p><label for="firstname">first name : </label><input id="firstname" type="text" name="firstname" size="40"></p>
