Upgrading to the latest version of jQuery/UI
plus.click({}, function() { }); was causing errors, they
were fixed by a new jQuery version.

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@ span.inline{
     clear: left;
 }
         </style>
-        <script type="text/javascript" src="lib/jquery/jquery-1.4.2.js"></script>
-        <script type="text/javascript" src="lib/jquery/jquery-ui-1.8.2.custom.min.js"></script>
+        <link href="lib/jquery/css/ui-lightness/jquery-ui-1.10.2.custom.css" rel="stylesheet">
+        <script src="lib/jquery/jquery-1.9.1.js"></script>
+        <script src="lib/jquery/jquery-ui-1.10.2.custom.js"></script>
         <script type="text/javascript" src="jquery-dynamic-form.js"></script>
         <script type="text/javascript">
 $(document).ready(function(){
