--- a/index.html
+++ b/index.html
@@ -7,28 +7,20 @@
 form p > label{
     display: block;
     width: 150px;
-    float: left;
     clear:left;
 }
 form p > span, fieldset > fieldset{
     display: block;
-    float: left;
     clear:left;
-}
-form p > input{
-    float: left;
-}
-form p > textarea{
-    float: left;
 }
 span.inline{
     display:inline;
     clear:none;
 }
-#phone1container {
+.phone1container {
     border: 1px solid red;
 }
-#phone2container {
+.phone2container {
     border: 1px solid blue;
 }
 .button_right {
@@ -136,7 +128,7 @@ $(document).ready(function(){
         </script>
     </head>
     <body>
-        <form method="post" action="target.php" value="Post">
+        <form method="post" action="target.php">
             <fieldset>
                 <legend> Nested fields duplication</legend>
                 <p><label for="firstname">first name: </label><input id="firstname" type="text" name="firstname" size="40"></p>
@@ -159,14 +151,14 @@ $(document).ready(function(){
                     <p><label for="postal">postal code: </label><input id="postal" type="text" name="postal_code" size="10"></p>
                     <p><label for="city">city: </label><input id="city" type="text" name="ville" size="50"></p>
 
-                    <p id="phone1container">
+                    <p id="phone1container" class="phone1container">
                         <label for="phone">telephone: </label><input id="phone" type="text" name="phone" size="50"><br />
                         <label for="pro">Professional</label><input id="pro" type="radio" value="pro" name="phoneType" />
                         <label for="perso">Personal</label><input id="perso" type="radio" value="perso" name="phoneType" />
                     </p>
                     <p><span><a id="phone1minus" href="">[-]</a> <a id="phone1plus" href="">[+]</a></span></p>
 
-                    <p id="phone2container">
+                    <p id="phone2container" class="phone2container">
                         <label for="phone2">telephone 2: </label><input id="phone2" type="text" name="phone2" size="50"><br />
                         <label for="professionnal">Professional ?</label><input id="professionnal" type="checkbox" value="pro" name="phonePro" /> <br />
                         <label for="more_info">More info</label><textarea id="more_info" name="more_info"></textarea>
