Altering reflowFormNames to work on all elements
The benefit here is that any element with a name
property can now become a containing structure for the
resultant form data. This does impose some restrictions,
namely requiring you to repurpose the "name" attribute.
A better solution in the future might be to just use
dynamicFormName for everything (except the actual form
controls).

--- a/index.html
+++ b/index.html
@@ -151,14 +151,14 @@ $(document).ready(function(){
                     <p><label for="postal">postal code: </label><input id="postal" type="text" name="postal_code" size="10"></p>
                     <p><label for="city">city: </label><input id="city" type="text" name="ville" size="50"></p>
 
-                    <p id="phone1container" class="phone1container">
+                    <p id="phone1container" class="phone1container" name="phone1">
                         <label for="phone">telephone: </label><input id="phone" type="text" name="phone" size="50"><br />
                         <label for="pro">Professional</label><input id="pro" type="radio" value="pro" name="phoneType" />
                         <label for="perso">Personal</label><input id="perso" type="radio" value="perso" name="phoneType" />
                     </p>
                     <p><span><a id="phone1minus" href="">[-]</a> <a id="phone1plus" href="">[+]</a></span></p>
 
-                    <p id="phone2container" class="phone2container">
+                    <p id="phone2container" class="phone2container" name="phone2">
                         <label for="phone2">telephone 2: </label><input id="phone2" type="text" name="phone2" size="50"><br />
                         <label for="professionnal">Professional ?</label><input id="professionnal" type="checkbox" value="pro" name="phonePro" /> <br />
                         <label for="more_info">More info</label><textarea id="more_info" name="more_info"></textarea>
