First pass on inject method(s)

--- a/index.html
+++ b/index.html
@@ -118,12 +118,9 @@ $(document).ready(function(){
 
     //Inject the data in the main form for prefilling
     // Doesn't work yet:
-    // mainDynamicForm.dynamicForm("inject", data);
+    mainDynamicForm.dynamicForm("injectForm", data);
 
     // Just for testing element clone functionality now
-    $("#phone1container").dynamicForm('add');
-    $("#phone2container").dynamicForm('add');
-    $("#phone2container").dynamicForm('add');
 });
         </script>
     </head>
