Recombining inject and injectForm methods
Now that the proof-of-concept work is done, combining
these two methods was straightforward. Testing the
input object to see if it's an array seems hacky to me,
but it was the best way I could think of to solve the
problem.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ $(document).ready(function(){
 
     //Inject the data in the main form for prefilling
     // Doesn't work yet:
-    mainDynamicForm.dynamicForm("injectForm", data);
+    mainDynamicForm.dynamicForm("inject", data);
 
     // Just for testing element clone functionality now
 });
